# ide

./: .gitignore  CMakeLists.txt  Constants.cpp  Constants.h  DOCUMENTACAO.md  Makefile  README.md  especificacao_lexica (2).txt  exemplo  exemplo.txt  exp.gals  exp_simulador_entrada.txt  gramatica_sintatica.txt
example/: all.txt  helloworld.txt
scripts/: build.sh  clean.sh  run.sh  setup.sh
src/: main.cpp
src/gals/: AST.h  Constants.cpp  Constants.h  Lexico.cpp  Lexico.h  Semantico.cpp  Sintatico.cpp  Sintatico.h  Token.h
src/ide/: CodeEditor.cpp  CodeEditor.h  MainWindow.cpp  MainWindow.h
src/interpreter/: AST.h  Interpreter.cpp  Interpreter.h  Value.h
src/lexer/: Lexer.cpp  Lexer.h  Token.cpp  Token.h
src/parser/: Parser.cpp  Parser.h
